--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <!-- endbuild -->
   <!-- SCRIPTS -->
+
   <!-- build:js lib/js/main.min.js -->
   <script type="text/javascript" src="components/angular/angular.min.js"></script>
   <script type="text/javascript" src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -21,6 +22,8 @@
   <script type="text/javascript" src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <!-- endbuild -->
   <!-- Custom Scripts -->
+  <script type="text/javascript" src="js/Chart.min.js"></script>
+  <script type="text/javascript" src="js/angular-chart.min.js"></script>
   <script type="text/javascript" src="js/sammy.min.js"></script>
 </head>
 <body ng-controller="MasterCtrl">
